--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Flutter Web</title>
 </head>
 <body>
-  <script src="main.dart.js" type="application/javascript"></script>
+  <p>내 고양이는 고약해</p>
+  <!-- <script src="main.dart.js" type="application/javascript"></script> -->
 </body>
 </html>
