--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <base href="/">
+  <!-- <base href="/"> -->
   <title>Flutter Web</title>
 </head>
 <body>
-  <p>내 고양이는 고약해</p>
-  <!-- <script src="main.dart.js" type="application/javascript"></script> -->
+  <!-- <p>내 고양이는 고약해</p> -->
+  <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
