--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <base href="banner_webview2/">
+  <base href="/banner_webview2/">
   <title>Flutter Web</title>
 </head>
 <body>
